# CMakeGTestExample

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  code.cpp  code.hpp  main.cpp
tests/: CMakeLists.txt  code.test.cpp
